--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,14 @@
-img {
+.walrus-showing {
   display: none;
+}
+.slide-walrus {
+  display: none;
+}
+.clickable {
+  cursor: pointer;
+  color: #0088cc;
+}
+
+.clickable:hover {
+  text-decoration: underline;
 }
